blockml/test/errors/02_field/e42/e42.view
view: e42
table: 1
fields:
- dimension: ccc
  sql: ${a.color !@^&%}   
